[gd_scene load_steps=4 format=3 uid="uid://brm3gj0dq3x5v"]

[ext_resource type="Script" uid="uid://cccd2v3ovqb8o" path="res://scripts/gameplay_screen.gd" id="1_1"]
[ext_resource type="Texture2D" uid="uid://l00rfc1g60xy" path="res://assets/ui/settings_icon.png" id="2_settings"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hud"]
bg_color = Color(0.00392157, 0.117647, 0.192157, 1)

[node name="GameplayScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.031, 0.11, 0.188, 1)
z_index = 0

[node name="SolvedImageBackground" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6
z_index = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TopHUDSpacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="PuzzleArea" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
z_index = 10

[node name="PuzzleGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/PuzzleArea"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[node name="BottomHUDSpacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2

[node name="TopHUD" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hud")
z_index = 20

[node name="MarginContainer" type="MarginContainer" parent="TopHUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="HBoxContainer" type="HBoxContainer" parent="TopHUD/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LevelLabel" type="Label" parent="TopHUD/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="TopHUD/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture_normal = ExtResource("2_settings")
ignore_texture_size = true
stretch_mode = 5

[node name="BottomHUD" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 180)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -180.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_hud")
z_index = 20

[node name="CenterContainer" type="CenterContainer" parent="BottomHUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="TopHUD/MarginContainer/HBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
